# Netcode-in-Rust

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTES.md  README.md
.github/workflows/: ci.yml  demo.yml  rust.yml
client/: Cargo.toml
client/src/: game.rs  input.rs  lib.rs  main.rs  network.rs  network_graph.rs  rendering.rs
demo/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.app.json
demo/src/: App.vue  app.css
demo/src/components/: WebSocket.vue
demo/src/lib/components/: game-with-rollback.svelte  game.svelte
demo/src/routes/: +layout.svelte  +page.svelte
server/: Cargo.toml
server/src/: client.rs  client_manager.rs  entity.rs  game.rs  lib.rs  main.rs  network.rs  packets.rs  physics.rs  utils.rs
shared/: Cargo.toml
shared/src/: lib.rs
tests/: benchmark_tests.rs  integration_tests.rs
