[workspace]
members = ["server", "client", "shared"]

[workspace.dependencies]
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
log = "0.4"
env_logger = "0.10.0"
clap = { version = "4.2.1", features = ["derive"] }
rand = "0.8"
minifb = "0.25"