[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
macroquad = { workspace = true }